css/style.css
/****** General ***********/
* {
    font-family: 'Raleway', sans-serif; 
}

:root {
    --main-color: #0065FC;
    --main-bg-color: #F2F2F2;
    --filter-bg-color: #DEEBFF;
}

.fa-solid {
    color: var(--main-color);
}

body {
    display: flex;
    justify-content: center;
    margin-top: 0px;
}

.main-container {
    width: 100%;
    max-width: 1440px;
    padding: 0 50px;
    box-sizing: border-box;
}

a {
    color: inherit;
    text-decoration: none;
}

.section-title {
    margin: 0;
    font-size: 22px;
}

.card {
    background-color: white;
    border-radius: 20px;
    padding: 5px;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

.card img {
    object-fit: cover;
}

.card-title {
    font-size: 16px;
}

.euro {
    font-weight: 700;
}

.neutral-star {
    color: var(--main-bg-color)
}

/****** Header and Navbar ***********/
header{    
    display: grid;
    grid-template-columns: 78% 22%;
    grid-template-rows: 1fr;
    grid-template-areas:
        "logo booki"
        "ul nav";
    margin: 0px;
    padding: 0px;
}

header img{
    grid-area: logo booki;
    cursor: pointer;
    width: 61.09px;
    height: 19px;
    margin: 30px;
    margin-left: 0px;
}

nav{
    grid-area: ul nav;   
    width: 294px;
    height: 35px;
    padding: 0px 25px;       
}

nav ul{
    display: flex;
    justify-items: space-between; 
    margin: 0px;
    padding: 0px 25px;
    gap: 68px;
}

nav ul li{
    list-style: none;
    cursor: pointer;
    position: relative;
    width: 113px;
    height: 35px;    
    padding-top: 16px;
    font-weight: 400;
}

nav ul li:first-child{
        
    color: #0065FC;
}

nav ul li:first-child:before{
    content: "";
    width: 100%;
    height: 3px;
    position: absolute;
    background: #0065FC;
    transform: translateY(-16px);
}

nav li:hover:before {
    content: "";    
    width: 100%;
    height: 3px;
    position: absolute;
    background: #0065FC;
    transform: translateY(-16px);
}

/****** Title And Search ***********/

.title-and-search{
    margin: 25px 0px;
}

.title{
    margin: 30px 0px;
}

.title h2{
    font-weight: 700;
    font-size: 22px;
}

.title p{
    font-weight: 400;
    font-size: 16px;
}

.search-bar ul{
    list-style: none;
    display: flex;
    padding: 0;
    margin: 0;
    width: 377px;
    height: 49px;
}

.search-icon{    
    width: 50px;
    height: 49px;    
    border-radius: 15px 0px 0px 15px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #F2F2F2;
}

.search-icon i:before{
    color: black;
    width: 14px;
    height: 18px;  
}

.search-form form{
    width: 195px;
    height: 49px;    
}

.search-form input{
    border: 1px solid #F2F2F2;
    width: 195px;
    height: 45px;    
    text-align: center;    
    font-weight: 700;
    font-size: 18px;
    color: black;
}

.search-form input::placeholder{   
    text-align: center;    
    font-weight: 700;
    font-size: 18px;
    color: black;  
}

.search-button input{
    cursor: pointer;
    width: 132px;
    height: 49px;
    border: 1px solid #0065FC;
    border-radius: 0px 15px 15px 0px;
    color: white;
    background-color: #0065FC;
    font-weight: 700;
    font-size: 18px;    
    text-align: center;    
}

/****** Filters ***********/

.filters{
    display: flex;
    align-items: center; 
    gap: 15px;
    margin: 30px auto;
}

.filters h3{
    font-weight: 700;
    font-size: 18px;
}

.filters button{
    display: flex;
    justify-content: center;   
    align-items: center;    
    height: 50px;
    border: 2px solid #d9d9d9;
    border-radius: 25px;
    padding: 4px 19px;
    gap: 10px;
    background-color: white;
}

.filters button:hover{    
    background-color: #DEEBFF;
}

.filters button i{   
    font-weight: 700;
    font-size: 17px;
}

.filters button h3{
    font-weight: 700;
    font-size: 17px;
}

.infos{
    display: flex;
    align-items: center;
    height: 24px;
    gap: 10px;
}

.icon-container{
    border: 1px solid #d9d9d9;
    border-radius: 25px;
    color: #0065FC;
    width: 24px;
    height: 24px;
    text-align: center;
}

.infos i{
    font-size: 10px;
    width: 4px;
}

.infos p{
    font-weight: 400;
    font-size: 16px;
}

/****** Hebergements And Populaires ***********/
.hebergements-and-populaires {
    display: flex;
    justify-content: space-between;
}

.hebergements-and-populaires section {
    background-color: var(--main-bg-color);
    border-radius: 20px;
    padding: 30px;
    box-sizing: border-box;
}

/****** Hebergements ***********/
.hebergements {
    width: 65%;
    display: flex;
    flex-direction: column;
    gap: 30px;
}

.hebergements h2{
    margin: 0;
    font-weight: 700;
    font-size: 22px;
}

.hebergements-cards-row{
    display: flex;
    justify-content: space-between;
    gap: 30px;
}

.hebergements-cards{   
    display: flex;
    border-radius: 20px; 
}

.hebergements-cards article{
    padding: 0px;
    width: 243px;
}

.hebergements-cards img{   
    width: 96%;
    height: 124px;
    border: 5px solid white;
    border-radius: 20px 20px 0 0;
}

.hebergements-cards .card-content{     
    padding:  0px 15px; 
    display: flex;
    flex-direction: column;
    justify-content: space-between;   
    box-sizing: border-box;
    gap: 8px;
}

.hebergements-cards .card-content .card-txt{
    display: flex;
    flex-direction: column;
    justify-content: space-between;    
    gap: 8px;
}

.hebergements-cards .card-title {
    margin-top: 0px;
    margin-bottom: 0px;
}

.hebergements-cards .card-subtitle {
    margin: 0;
    font-weight: 400;
    font-size: 14px;
}

.hebergements-cards .card-rating {
    margin-bottom: 8px;
}

.hebergements .show-more{
    font-weight: 700;
    font-size: 18px;
}

/****** Populaires ***********/
.populaires {
    width: 32%;
}

.populaires-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.populaires-cards .card {
    display: flex;
    margin-top: 33px;
}

.populaires-cards img {
    width: 33%;
    height: 136px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
}

.populaires-cards .card-content {
    width: 67%;
    padding-left: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
}

.populaires-cards .card-title {
    margin-top: 10px;
    margin-bottom: 4px;
}

.populaires-cards .card-subtitle {
    margin: 0;
}

.populaires-cards .card-rating {
    margin-bottom: 5px;
}




/* Le code ci-dessous correspond à la version responsive uniquement */

/****** Media queries ***********/
/* Medium devices (tablets, less/equal than 1024px) */
@media (max-width: 1024px) {
    .hebergements-and-populaires {
        flex-direction: column;
    }

    .hebergements {
        width: 100%;
    }

    .populaires {
        width: 100%;
        margin-top: 50px;
    }

    .populaires-cards {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .populaires-cards a {
        width: 30%;
    }

    .populaires-cards .card-title {
        font-size: 14px;
    }

    .populaires-cards .card-subtitle {
        font-size: 13px;
    }
}

/* Small devices (phones, less than 768px) */
@media (max-width: 767.98px) {
    /* ... */
}

